--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -18,9 +18,12 @@
   "headers": [
     {
       "source": "/assets/(.*)",
-      "headers": {
-        "cache-control": "public, max-age=31536000, immutable"
-      }
+      "headers": [
+        {
+          "key": "cache-control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
     }
   ]
 }
