--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -4,22 +4,21 @@
     {
       "src": "package.json",
       "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
+      "config": { "distDir": "dist" }
     }
   ],
-  "rewrites": [
+  "routes": [
     {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ],
-  "headers": [
+      "src": "/assets/(.*)",
+      "headers": { "Access-Control-Allow-Origin": "*" }
+    },
     {
-      "source": "/assets/(.*)",
+      "src": "/(.*)",
+      "dest": "/index.html",
       "headers": {
-        "cache-control": "public, max-age=31536000, immutable"
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "GET, OPTIONS, HEAD",
+        "Access-Control-Allow-Headers": "X-Requested-With, Content-Type"
       }
     }
   ]
