--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,8 @@
     "natural": "^8.0.1",
     "node-nlp": "^5.0.0-alpha.5",
     "pdf-parse": "^1.1.1",
-    "stopword": "^3.1.4"
+    "stopword": "^3.1.4",
+    "tesseract.js": "^5.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
